<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyProject</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <!-- Splash -->
    <string name="load_config_server_error">Server error</string>
    <string name="load_config_network_unavailable">Failed to connect, please check your network connection.</string>
    <string name="general_error_title">Sorry!</string>
    <string name="general_error_message">System busy. Please try again later.</string>
    <string name="general_error_confirm">Confirm</string>

    <!-- navigation bar -->
    <string name="navigation_bar_back">Back</string>
    <string name="navigation_bar_done">Done</string>

    <!-- bottom tab bar -->
    <string name="tab_bar_tv_series">TV Series</string>
    <string name="tab_bar_movies">Movies</string>
    <string name="tab_bar_download">Download</string>
    <string name="tab_bar_play_history">History</string>
    <string name="tab_bar_settings">Settings</string>

    <!-- filter bar -->
    <string name="done">Done</string>
    <string name="genres">Genres</string>
    <string name="all">All</string>
    <string name="action">Action</string>
    <string name="animated">Animated</string>
    <string name="crime">Crime</string>
    <string name="comedy">Comedy</string>
    <string name="drama">Drama</string>
    <string name="documentary">Documentary</string>
    <string name="horror">Horror</string>
    <string name="aws">Available without subscription</string>

    <!-- setting lable -->
    <string name="setting_customer_login">Customer Login</string>
    <string name="setting_product_offer">Product/Offer</string>
    <string name="setting_how_to_use">How to use</string>
    <string name="setting_terms_conditions">Terms and Conditions</string>
    <string name="setting_customer_feedback">Customer Feedback</string>
    <string name="setting_version">Version</string>
    <string name="setting_version_number">1.0.1</string>
    <string name="setting_login_forgot_password">forgot password</string>
    <string name="setting_login_input_box_login_label">  Login</string>
    <string name="setting_login_input_box_password_label">  Password</string>
    <string name="setting_login_button_login">Login</string>
    <string name="setting_login_button_sign">Sign Up</string>

    <!-- system -->
    <string name="progress_dialog_title">Loading</string>
    <string name="progress_dialog_message">Please wait</string>
    <string name="no_terms_conditions"> No relevant info</string>

    <!-- vod deltail -->
    <string name="you_might_also_like_title_text">You might also like</string>
    <string name="content_provider_label_text">Content Provider Label</string>

    <!-- vod downlaod -->
    <string name="downlaod_list_empty_message">Your downloads will be displayed here</string>
    <string name="downlaod_list_remove_message">Remove from download list and delete downloaded video?</string>

    <!-- vod play history -->
    <string name="history_list_empty_message">Your history will be displayed here</string>
    <string name="history_list_remove_message">Remove from history list?</string>

    <!-- the tuan gou string -->
    <string name="border_top">Border Top</string>
    <string name="border_bottom">Border Bottom</string>
    <string name="image_url">Image Url</string>

    <!-- 设置 -->
    <string name="recommend_to_weixin_friend">推荐给微信好友</string>
    <string name="feedback">意见反馈</string>
    <string name="about_us">关于我们</string>
    <string name="app_recommend">应用推荐</string>
    <string name="clear_cache">清除缓存</string>
    <string name="mobile_number">手机号</string>
    <string name="mobile_number_hint">方便我们尽快反馈</string>
    <string name="content_edit_hint">欢迎在这儿发表宝贵的意见哦~</string>

    <!-- 首页PopupWnidow -->
    <string name="barcode_buy">条码购</string>
    <string name="camera_buy">拍照购</string>
    <string name="color_buy">颜色购</string>

    <!-- 首页 -->
    <string name="index_limit">还剩</string>
    <string name="index_hour">时</string>
    <string name="index_min">分</string>
    <string name="index_seconds">秒</string>
    <string name="index_price">秒杀价:</string>
    <string name="index_raw_price">原价:</string>
    <string name="index_slogan">疯狂秒杀</string>
    <string name="index_promotion">促销卖场</string>
    <string name="index_recharge">充值</string>
    <string name="index_group_buy">团购</string>
    <string name="index_lottery">彩票</string>
    <string name="index_order">订单状态</string>
    <string name="index_history">浏览历史</string>
    <string name="index_collect">我的关注</string>
    <string name="index_life_journey">生活娱乐</string>
    <string name="index_notify_info">向左滑，更多优惠等你抢</string>
    <string name="index_shopping_jinqiufengbao">金秋风暴</string>
    <string name="index_shopping_remenyouhui">热门特惠</string>
    <string name="httpError">连接失败,请稍候再试</string>
    <!-- 下拉刷新  end -->
    <string name="drop_down_list_header_default_text">Click to refresh&#8230;</string>
    <string name="drop_down_list_header_pull_text">Drop Down to refresh&#8230;</string>
    <string name="drop_down_list_header_release_text">Release to refresh&#8230;</string>
    <string name="drop_down_list_header_loading_text">加载中&#8230;</string>
    <string name="drop_down_list_footer_default_text"></string>
    <string name="drop_down_list_footer_loading_text">加载中&#8230;</string>
    <string name="drop_down_list_footer_no_more_text">无更多信息</string>
    <string name="image_content">Image</string>
    <string name="not_network">暂无网络</string>
    <string name="content_desc_pinned_downloaded">Pinned to device and downloaded</string>
    <string name="content_desc_pinned_downloading">Pinned to device and downloading</string>
    <string name="content_desc_pinned_not_downloaded">Pinned to device and waiting to download</string>
    <string name="content_desc_unpinned_downloaded">Temporarily downloaded</string>
    <string name="content_desc_unpinned_downloading">Temporarily downloading</string>
    <string name="content_desc_unpinned_not_downloaded">Not downloaded</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>

    <!--
    error messge
    <string name="ok">OK</string>
    <string name="tbc">TBC</string>
    <string name="update">Update</string>
    
    <string name="sorry">Sorry!</string>
    <string name="confirm">Confirm</string>
    <string name="call_now">Call now</string>
    <string name="subscribe_now">Subscribe now</string>
    <string name="have_not_subscribe">Sorry! You have not subscribed to this service yet. Please call our sales hotline to subscribe.</string>
	<string name="program_cannot_play">Sorry! The selected program cannot be played temporarily. Please try again later.</string>
	
	<string name="program_cannot_download">Sorry! The selected program cannot be downloaded temporarily. Please try again later.</string>
	<string name="only_in_sa">The service is available only in South Africa.</string>
    <string name="only_login_5_player">Each MTN user can only login to 5 player simultaneously. Please try again later.</string>
    
    <string name="general_error">System busy. Please try again later.</string>
    <string name="connection_lost">Connection lost</string>
    <string name="check_connection">Please check your internet or data connection.</string>
    
    <string name="this_is_end_of_program">This is the end of the program.</string>
    <string name="checkout_under_celluar_network">"Play under mobile data network" is closed in Settings, if you agree to watch the videos under a mobile data network, please change your settings. Users should keep track of their data usage and data charge.</string>
    
    <string name="go_to_settings">Go to Settings</string>
    <string name="first_time_open_checkout">Note: Video streaming quality depends on your data connection condition and bandwidth availability. If you experience pixellated video or audio/video synchronization problems, please check your network condition.</string>
    <string name="system_under_maintenance">System under maintenance, please try again later. </string>
    <string name="enable_3g_alert">"Download using the mobile data network" is closed in "Settings". If you agree to download videos under a mobile data network, please change your settings. Users should keep track of data usage and consequent charges.</string>
    <string name="update_now">Update now</string>
    <string name="update_now_message">The latest version of this app is available. Update now?</string>
   
    <string name="confirm_to_remove">Confirm to remove downloaded copy? Video file and bookmark will be removed</string>
    <string name="video_expired">Sorry, the video is expired</string>
    <string name="invalid_pin">Invalid PIN, please try again</string>
    <string name="play_last_viewed">Play from last viewed scene</string>
    <string name="play_from_beginning">Play from beginning</string>
    
    <string name="json_parsing_error">System Busy (10006)</string>
    <string name="player_error">System Busy (10007)</string>
    <string name="verimatrix_error">System Busy (10012)</string>
    -->

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="only_download_10_videos">Sorry, you are only allowed to download 10 videos, please remove your archives before downloading new videos</string>
    <string name="only_3_concurrent_downloads">Sorry, only 3 concurrent downloads are allowed, please wait until the current downloading processes completed</string>
    <string name="end_of_movie">End of Movie</string>
    <string name="download_error_unknown">System busy. Please try again later.</string>
    <string name="download_error_network_broken">System busy. Please try again later.</string>
    <string name="download_error_nomorespace">System busy. Please try again later.</string>
    <string name="download_error_version_unsupportted">System busy. Please try again later.</string>
    <string name="download_error_live_unsupportted">System busy. Please try again later.</string>
    <string name="download_error_bad_url">System busy. Please try again later.</string>
    <string name="download_error_cacheallowflag_no">System busy. Please try again later.</string>
    <string name="download_error_offline_not_allowed">System busy. Please try again later.</string>
    <string name="download_error_checkout_failed">System busy. Please try again later.</string>
    <string name="download_error_start_failed">System busy. Please try again later.</string>
    <string name="play_info_network_down">System busy. Please try again later.</string>
    <string name="play_info_network_no_file">System busy. Please try again later.</string>
    <string name="play_error_unknown">System busy. Please try again later.</string>
    <string name="play_error_hd_decoding_not_supported">System busy. Please try again later.</string>
    <string name="play_error_no_aternate_supported">System busy. Please try again later.</string>
    <string name="play_error_http_streaming">System busy. Please try again later.</string>
    <string name="play_error_rooted_device">System busy. Please try again later.</string>
    <string name="checkout_unknown">System busy. Please try again later.</string>
    <string name="checkout_parse_json_failed">System busy. Please try again later.</string>
    <string name="checkout_novas">System busy. Please try again later.</string>

</resources>