<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/page_padding_top"
    android:paddingBottom="@dimen/page_padding_bottom"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/settingLoginRlyout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/setting_tabel_view_bg_color"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/mtnPlayerImage"
            android:layout_width="@dimen/setting_detail_login_mtn_palyer_image_width"
            android:layout_height="@dimen/setting_detail_login_mtn_palyer_image_height"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/setting_detail_login_mtn_palyer_image_margin_top"
            android:src="@drawable/logo_mtnplayer" />

        <EditText
            android:id="@+id/usernameBox"
            android:layout_width="@dimen/setting_detail_login_input_box_width"
            android:layout_height="@dimen/setting_detail_login_input_box_height"
            android:layout_below="@+id/mtnPlayerImage"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/setting_detail_login_input_box_login_margin_top"
            android:textSize="@dimen/setting_detail_login_input_box_label_size"
            android:textColor="@color/setting_detail_login_input_label_color"
            android:text="@string/setting_login_input_box_login_label"
            android:background="@drawable/input_bg_grey" 
            android:paddingLeft="@dimen/setting_detail_login_input_box_label_margin_left"
            android:textCursorDrawable="@color/setting_detail_login_input_label_color"/>

        <EditText
            android:id="@+id/passwordBox"
            android:layout_width="@dimen/setting_detail_login_input_box_width"
            android:layout_height="@dimen/setting_detail_login_input_box_height"
            android:text="@string/setting_login_input_box_password_label"
            android:layout_below="@+id/usernameBox"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/setting_detail_login_input_box_label_size"
            android:paddingLeft="@dimen/setting_detail_login_input_box_label_margin_left"
            android:textColor="@color/setting_detail_login_input_label_color"
            android:layout_marginTop="@dimen/setting_detail_login_input_box_password_margin_top"
            android:background="@drawable/input_bg_grey" 
            android:textCursorDrawable="@color/setting_detail_login_input_label_color"/>

        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/passwordBox"
            android:layout_alignRight="@+id/passwordBox"
            android:layout_marginTop="@dimen/setting_detail_login_fogot_password_margin_top"
            android:text="@string/setting_login_forgot_password"
            android:textColor="#ffc20e"
            android:textSize="@dimen/setting_detail_login_fogot_password_label_size" >
        </TextView>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="@dimen/setting_detail_login_input_box_width"
            android:layout_height="@dimen/setting_detail_login_input_box_height"
            android:layout_below="@+id/forgotPassword"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/setting_detail_login_button_login_margin_top"
            android:background="@drawable/btn_bg_grey_trans"
            android:text="@string/setting_login_button_login" 
            android:layout_centerInParent="true"
            android:textColor="@color/setting_detail_login_input_label_color"
            android:textSize="@dimen/setting_detail_login_button_label_size">
        </Button>

        <Button
            android:id="@+id/signButton"
            android:layout_width="@dimen/setting_detail_login_input_box_width"
            android:layout_height="@dimen/setting_detail_login_input_box_height"
            android:layout_below="@+id/loginButton"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/setting_detail_login_button_sign_margin_top"
            android:background="@drawable/btn_bg_yellow"
            android:text="@string/setting_login_button_sign"
            android:textColor="#000000" 
            android:textSize="@dimen/setting_detail_login_button_label_size"
            android:layout_centerInParent="true">
        </Button>
    </RelativeLayout>

</LinearLayout>