<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="horizontal"
        android:background="#FFFFFF"
        android:padding="3dp"
         >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/index_promotion_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/app_home_shortcuts_button_selector"
                android:onClick="clickCategory"
                android:src="@drawable/shortcuts_icon_promotion" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/index_promotion"
                android:textColor="@color/black"
                android:textSize="@dimen/micro_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/index_recharge_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/app_home_shortcuts_button_selector"
                android:onClick="clickCategory"
                android:src="@drawable/shortcuts_icon_recharge" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/index_recharge"
                android:textColor="@color/black"
                android:textSize="@dimen/micro_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/index_groupbuy_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/app_home_shortcuts_button_selector"
                android:onClick="clickCategory"
                android:src="@drawable/shortcuts_icon_groupbuy" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/index_group_buy"
                android:textColor="@color/black"
                android:textSize="@dimen/micro_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/index_lottery_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/app_home_shortcuts_button_selector"
                android:onClick="clickCategory"
                android:src="@drawable/shortcuts_icon_lottery" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/index_lottery"
                android:textColor="@color/black"
                android:textSize="@dimen/micro_text_size" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="horizontal"
        android:background="#FFFFFF"
        android:padding="3dp"
         >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/index_order_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/app_home_shortcuts_button_selector"
                android:onClick="clickCategory"
                android:src="@drawable/shortcuts_icon_order" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/index_order"
                android:textColor="@color/black"
                android:textSize="@dimen/micro_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/index_history_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/app_home_shortcuts_button_selector"
                android:onClick="clickCategory"
                android:src="@drawable/shortcuts_icon_history" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/index_history"
                android:textColor="@color/black"
                android:textSize="@dimen/micro_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/index_collect_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/app_home_shortcuts_button_selector"
                android:onClick="clickCategory"
                android:src="@drawable/shortcuts_icon_collect" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/index_collect"
                android:textColor="@color/black"
                android:textSize="@dimen/micro_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/index_life_journey_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/app_home_shortcuts_button_selector"
                android:onClick="clickCategory"
                android:src="@drawable/shortcuts_icon_life_journey" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/index_life_journey"
                android:textColor="@color/black"
                android:textSize="@dimen/micro_text_size" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>